src/components/atoms/Slider/Slider.css
.Slider {
  position: relative;
  z-index: 1;
  margin: 0 auto;
}

.Slider > input[type="range"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  outline: none;
  border: 2px solid rgba(255, 255, 255, 0.3);
  border-radius: 4px;
  width: 97%;
  height: 4px;
  background-color: var(--white);
  background-image: linear-gradient(to bottom, var(--gray-light), var(--black));
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -webkit-tap-highlight-color: var(--transparent);
}

.Slider > input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  cursor: pointer;
  border: none;
  width: 23px;
  height: 23px;
  background-color: var(--transparent);

  /* CSS Sprite */
  background-image: url(/assets/images/slider-handles.png);
  background-size: 23px 46px;
  background-repeat: no-repeat;
  background-position: 0 -23px;
}

.Slider > input[type="range"]::-moz-range-thumb {
  -moz-appearance: none;
  cursor: pointer;
  border: none;
  width: 23px;
  height: 23px;
  background-color: var(--transparent);

  /* CSS Sprite */
  background-image: url(/assets/images/slider-handles.png);
  background-size: 23px 46px;
  background-repeat: no-repeat;
  background-position: 0 -23px;
}

.Slider > input[type="range"]:active::-webkit-slider-thumb {
  cursor: ew-resize;
  background-position: 0 0;
}

.Slider > input[type="range"]:active::-moz-range-thumb {
  cursor: ew-resize;
  background-position: 0 0;
}

.Slider__value {
  position: absolute;
  top: 11.5px;
  left: 4px;
  z-index: 2;
  width: 0;
  height: 4px;
  background: #d7d7d7;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5) inset;
  border-radius: 0 3px 3px 0;
}

